toolchain/internal/core/analysis/testdata/errors/naming/enum_member_annotation_not_camel.vdl
// @expect: E102

enum Status {
  @BadAnn
  Active
}
